policyenvoyfilter/envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: httpbin
                      domains:
                        - "app0.customer.com"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: app0.ns0.svc.cluster.local
                    - name: github
                      domains:
                        - "app1.customer.com"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: app1.ns1.svc.cluster.local
                    - name: unknown
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: unknown
                access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% \"%DYNAMIC_METADATA(istio.mixer:status)%\" \"%UPSTREAM_TRANSPORT_FAILURE_REASON%\" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTREA [...]
                    path: /dev/stdout
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: test_wasm_plugin
                        vm_config:
                          vm_id: test_vm
                          runtime: envoy.wasm.runtime.v8
                          code:
                            local: { filename: /host/target/wasm32-unknown-unknown/release/burst_header.wasm }
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          value: |
                            {
                              "is_gw": false,
                              "service_cluster": "healthcluster",
                              "service_authority": "localhost",
                              "service_path": "/burstmetrics",
                              "path": "/get",
                              "user_agent": "HTTPie/",
                              "cache_seconds": 30,
                              "namespace": "burst-filter-client",
                              "deployment": "burst-filter-client-1"
                            }
                  - name: envoy.filters.http.router
  clusters:
    - name: app0.ns0.svc.cluster.local
      connect_timeout: 10s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: some_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
      metadata:
        filter_metadata:
          istio:
            services:
            - host: burst-filter-1.burst-filter.svc.cluster.local
              name: burst-filter-1
              namespace: burst-filter-client
    - name: app1.ns1.svc.cluster.local
      connect_timeout: 10s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: some_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
      metadata:
        filter_metadata:
          istio:
            services:
              - host: app1.ns1.svc.cluster.local
                name: app1
                namespace: ns1
    - name: unknown
      connect_timeout: 10s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: some_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
    - name: healthcluster
      connect_timeout: 10s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: some_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      #if running in docker, change to something reachable, like public ip
                      address: 172.29.127.9
                      port_value: 8080

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
